--- a/index.html
+++ b/index.html
@@ -11,20 +11,34 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900|Work+Sans:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <ul class="flex-container-header">
-            <li><a href="#">Explore</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><button>SIGN UP</button></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul class="flex-container-header">
+                <img src="" alt="img" class="logo">
+                <li><a href="#">Explore</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><button>SIGN UP</button></li>
+            </ul>
+        </nav>
+    </header>
     <div>
         <div class="headline-container">
             <h1 class="headline">Want To Learn A New Skill?</h1>
             <p class="para-below-headline">Or, level up an existing skill? We have just what you want. [Brand name] offers free as well as paid online courses in different fields from creators all over the world.</p>
             <button class="btn-headline">Learn more</button>
+        </div>
+    </div>
+    <div class="skillcontainer1">
+        <div class="skill1-para">
+            <p class="skill1">Graphic Designing</p>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ea sapiente laudantium totam, ut perspiciatis minima alias optio fugiat quos suscipit harum, temporibus eligendi? Ipsum a repellat obcaecati ratione maxime.
+            </p>
+        </div>
+        <div class="skill1-img-container">
+            <img src="D:\Blender render\donutfinal.png" alt="donut" class="skill1-img"></img>
         </div>
     </div>
 </body>
