--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul class="flex-container-header">
-                <img src="" alt="img" class="logo">
+                <img src="./assets/g1136.png" alt="img" class="logo">
                 <li><a href="#">Explore</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">About Us</a></li>
@@ -26,7 +26,7 @@
     <div>
         <div class="headline-container">
             <h1 class="headline">Want To Learn A New Skill?</h1>
-            <p class="para-below-headline">Or, level up an existing skill? We have just what you want. [Brand name] offers free as well as paid online courses in different fields from creators all over the world.</p>
+            <p class="para-below-headline">We have just what you want. SkillDome<sup>&trade;</sup>offers free as well as paid online courses in different fields from creators all over the world.</p>
             <button class="btn-headline">Learn more</button>
         </div>
     </div>
