--- a/index.html
+++ b/index.html
@@ -25,21 +25,22 @@
     </header>
     <div>
         <div class="headline-container">
-            <h1 class="headline">Want To Learn A New Skill?</h1>
-            <p class="para-below-headline">We have just what you want. SkillDome<sup>&trade;</sup>offers free as well as paid online courses in different fields from creators all over the world.</p>
+            <h1 class="headline show-on-scroll">Want To Learn A New Skill?</h1>
+            <p class="para-below-headline show-on-scroll">We have just what you want. SkillDome<sup>&trade;</sup>offers free as well as paid online courses in different fields from creators all over the world.</p>
             <button class="btn-headline">Learn more</button>
         </div>
     </div>
     <div class="skillcontainer1">
         <div class="skill1-para">
-            <p class="skill1">Graphic Designing</p>
-            <p>
+            <p class="skill1 show-on-scroll">Graphic Designing</p>
+            <p class="skill-description-on-main-page show-on-scroll">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ea sapiente laudantium totam, ut perspiciatis minima alias optio fugiat quos suscipit harum, temporibus eligendi? Ipsum a repellat obcaecati ratione maxime.
             </p>
         </div>
         <div class="skill1-img-container">
-            <img src="D:\Blender render\donutfinal.png" alt="donut" class="skill1-img"></img>
+            <img src="D:\Blender render\donutfinal.png" alt="donut" class="skill1-img show-on-scroll"></img>
         </div>
     </div>
+    <script src="./js/show-on-scroll.js"></script>
 </body>
 </html>
