--- a/pricing.html
+++ b/pricing.html
@@ -17,7 +17,7 @@
         <nav>
             <ul class="flex-container-header">
                 <a href="index.html">
-                    <img src="D:\Inkscape\g1136.png" alt="img" class="logo">
+                    <img src="./assets/g1136.png" alt="img" class="logo">
                 </a>
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
