--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <nav>
             <ul class="flex-container-header">
                 <a href="index.html">
-                    <img src="./assets/g1136.png" alt="img" class="logo">
+                    <img src="D:\Inkscape\g1136.png" alt="img" class="logo">
                 </a>
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
@@ -32,17 +32,17 @@
     </div>
     <div class="form-div">
         <form action="pricing.html" method="POST" class="form-container">
-            <label for="name" id="name-label">*Full Name</label>
-            <input type="text" name="name" placeholder="Your Full Name..." id="name-input">
-            <label for="email" id="email-label">*Email</label>
-            <input type="email" name="email" placeholder="example@xyz.com" id="email-input">
-            <label for="message" id="message-label">*Message</label>
-            <textarea type="text" name="message" placeholder="Type Something..." id="message-input"></textarea>
+            <!-- <label for="name" id="name-label">*Full Name</label> -->
+            <input type="text" name="name" class="top-margin" placeholder="*Your Full Name" id="name-input">
+            <!-- <label for="email" id="email-label">*Email</label> -->
+            <input type="email" name="email" class="top-margin" placeholder="*Email ID: example@xyz.com" id="email-input">
+            <!-- <label for="message" id="message-label">*Message</label> -->
+            <textarea type="text" name="message" class="top-margin" placeholder="*Type your message..." id="message-input"></textarea>
             <p id="required-field">*Required Fields</p>
-            <button id="form-submit-btn">Submit</button>
+            <button id="form-submit-btn">Submit Your Response</button>
         </form>
     </div>
-    <script src="./js/main.js"></script>
+    <!-- <script src="./js/main.js"></script> -->
     <script src="./js/scroll.js"></script>
     <!--<div>
         <h1>Thank you for reaching out to us!</h1>
