--- a/pricing.html
+++ b/pricing.html
@@ -44,8 +44,8 @@
         </div>
         <div class="plans">
             <h1 class="plan-head">Pro</h1>
-            <p class="plan-price" id="plan-rate">$29/mo</p>
-            <p class="plan-price-cut" id="plan-rate-previous">$70/mo</p>
+            <p class="plan-price" id="plan-rate">$25.99/mo</p>
+            <p class="plan-price-cut" id="plan-rate-previous">$69.99/mo</p>
             <p class="plan-recommend">(Recommended Plan)</p>
             <p class="plan-content plan-content-margin">Access to All Free Videos</p>
             <p class="plan-content">Additional Learning Resources</p>
@@ -58,8 +58,8 @@
         </div>
         <div class="plans">
             <h1 class="plan-head">Premium</h1>
-            <p class="plan-price">$59/mo</p>
-            <p class="plan-price-cut">$120/mo</p>
+            <p class="plan-price" id="premium-plan-rate">$58.99/mo</p>
+            <p class="plan-price-cut" id="premium-plan-rate-previous">$119.99/mo</p>
             <p class="plan-content plan-content-margin-premium">Access to All Free Videos</p>
             <p class="plan-content">Additional Learning Resources</p>
             <p class="plan-content">Bonus Content</p>
@@ -73,39 +73,39 @@
     <div id="selection-country">
         <select id="drop-down-country">
             <option disabled="disabled" value="selection" selected>Select your country</option>
-            <option value="AUD">AUD</option>
-            <option value="BGN">BGN</option>
-            <option value="CAD">CAD</option>
-            <option value="BRL">BRL</option>
-            <option value="CNY">CNY</option>
-            <option value="CHF">CHF</option>
-            <option value="DKK">DKK</option>
-            <option value="CZK">CZK</option>
-            <option value="GBP">GBP</option>
-            <option value="EUR">EUR</option>
-            <option value="HRK">HRK</option>
-            <option value="HKD">HKD</option>
-            <option value="IDR">IDR</option>
-            <option value="HUF">HUF</option>
-            <option value="INR">INR</option>
-            <option value="ILS">ILS</option>
-            <option value="JPY">JPY</option>
-            <option value="ISK">ISK</option>
-            <option value="MXN">MXN</option>
-            <option value="KRW">KRW</option>
-            <option value="NOK">NOK</option>
-            <option value="MYR">MYR</option>
-            <option value="PHP">PHP</option>
-            <option value="NZD">NZD</option>
-            <option value="RON">RON</option>
-            <option value="PLN">PLN</option>
-            <option value="SEK">SEK</option>
-            <option value="RUB">RUB</option>
-            <option value="THB">THB</option>
-            <option value="SGD">SGD</option>
-            <option value="USD">USD</option>
-            <option value="TRY">TRY</option>
-            <option value="ZAR">ZAR</option>
+            <option value="AUD">Australia</option>
+            <option value="BGN">Bulgaria</option>
+            <option value="CAD">Canada</option>
+            <option value="BRL">Brazil</option>
+            <option value="CNY">China</option>
+            <option value="CHF">Switzerland</option>
+            <option value="DKK">Denmark</option>
+            <option value="CZK">Czech Republic</option>
+            <option value="GBP">UK</option>
+            <option value="EUR">Europe</option>
+            <option value="HRK">Croatia</option>
+            <option value="HKD">Honk Kong</option>
+            <option value="IDR">Indonesia</option>
+            <option value="HUF">Hungary</option>
+            <option value="INR">India</option>
+            <option value="ILS">Israel</option>
+            <option value="JPY">Japan</option>
+            <option value="ISK">Iceland</option>
+            <option value="MXN">Mexico</option>
+            <option value="KRW">South Korea</option>
+            <option value="NOK">Norway</option>
+            <option value="MYR">Malaysia</option>
+            <option value="PHP">Philippines</option>
+            <option value="NZD">New Zealand</option>
+            <option value="RON">Romania</option>
+            <option value="PLN">Poland</option>
+            <option value="SEK">Sweden</option>
+            <option value="RUB">Russia</option>
+            <option value="THB">Thailand</option>
+            <option value="SGD">Singapore</option>
+            <option value="USD">United States</option>
+            <option value="TRY">Turkey</option>
+            <option value="ZAR">South Africa</option>
         </select>
         <!-- <button id="submit">Go</button> -->
     </div>
