--- a/pricing.html
+++ b/pricing.html
@@ -14,6 +14,39 @@
 </head>
 <body>
     <header>
+        <nav class="navigation">
+            <!-- <a href="index.html" class="hide">
+                <img src="./assets/g1136.png" alt="img" class="logo">
+            </a> -->
+            <div class="menu">
+                <div class="menu-content">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+                <ul class="flex-container-header hide menulist">
+                <!-- <a href="index.html">
+                <img src="./assets/g1136.png" alt="img" class="logo">
+                </a> -->
+                <!-- <input type="checkbox" /> -->
+                    <li><a href="explore.html">Explore</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <!--<li><a href="#">About Us</a></li>-->
+                    <li><a href="contact.html">Contact</a></li>
+                    <!-- <li><button>SIGN UP</button></li> -->
+                </ul>
+                <!-- <li><button>SIGN UP</button></li> -->
+            </div>
+            <!-- <a href="index.html" class="hide">
+                <img src="./assets/g1136.png" alt="img" class="logo">
+            </a> -->
+            <li class="sign-up-list">
+                <button>SIGN UP</button>
+            </li>
+            <!-- <span class="material-icons">menu</span> -->
+        </nav>
+    </header>
+    <!-- <header>
         <nav>
             <ul class="flex-container-header">
                 <a href="index.html">
@@ -25,7 +58,7 @@
                 <li><button>SIGN UP</button></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
     <div class="explore-section-1">
         <h1 class="pricing-headline">Pricing</h1>
     </div>
@@ -109,6 +142,7 @@
         </select>
         <!-- <button id="submit">Go</button> -->
     </div>
+    <script src="./js/navigation.js"></script>
     <script src="./js/pricing.js"></script>
     <!-- <script src="./js/scroll.js"></script> -->
 </body>
