--- a/contact.html
+++ b/contact.html
@@ -14,19 +14,51 @@
 </head>
 <body>
     <header>
+        <nav class="navigation">
+            <!-- <a href="index.html" class="hide">
+                <img src="./assets/g1136.png" alt="img" class="logo">
+            </a> -->
+            <div class="menu">
+                <div class="menu-content">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+                <ul class="flex-container-header hide menulist">
+                <!-- <a href="index.html">
+                <img src="./assets/g1136.png" alt="img" class="logo">
+                </a> -->
+                <!-- <input type="checkbox" /> -->
+                    <li><a href="explore.html">Explore</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <!--<li><a href="#">About Us</a></li>-->
+                    <li><a href="contact.html">Contact</a></li>
+                    <!-- <li><button>SIGN UP</button></li> -->
+                </ul>
+                <!-- <li><button>SIGN UP</button></li> -->
+            </div>
+            <!-- <a href="index.html" class="hide">
+                <img src="./assets/g1136.png" alt="img" class="logo">
+            </a> -->
+            <li class="sign-up-list">
+                <button>SIGN UP</button>
+            </li>
+            <!-- <span class="material-icons">menu</span> -->
+        </nav>
+    </header>
+    <!-- <header>
         <nav>
             <ul class="flex-container-header">
                 <a href="index.html">
-                    <img src="./assets/g1136.png" alt="img" class="logo">
+                    <img src="D:\Inkscape\g1136.png" alt="img" class="logo">
                 </a>
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <!--<li><a href="#">About Us</a></li>-->
                 <li><a href="contact.html">Contact</a></li>
                 <li><button>SIGN UP</button></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
     <div class="explore-section-1">
         <h1 class="pricing-headline">Contact Us</h1>
     </div>
@@ -43,7 +75,8 @@
         </form>
     </div>
     <!-- <script src="./js/main.js"></script> -->
-    <script src="./js/scroll.js"></script>
+    <script src="./js/navigation.js"></script>
+    <!-- <script src="./js/scroll.js"></script> -->
     <!--<div>
         <h1>Thank you for reaching out to us!</h1>
         <h2>For more info, please contact</h2>
