--- a/error404.html
+++ b/error404.html
@@ -37,8 +37,8 @@
             </div>
         </div>
     </div>
-    <script src="./js/main.js"></script>
-    <script src="./js/scroll.js"></script>
+    <!-- <script src="./js/main.js"></script> -->
+    <!-- <script src="./js/scroll.js"></script> -->
     <!--<script>
         // var gohomebtn = document.getElementById("btn1");
         // gohomebtn.addEventListener("click", function(){
