--- a/explore.html
+++ b/explore.html
@@ -1,32 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SkillDome | Explore</title>
     <link rel="stylesheet" href="./css/stylemain.css">
+    <!-- <link rel="stylesheet" type="text/css" href="slick/slick.css" /> -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" /> -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:Regular|Work+Sans:300" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:900|Work+Sans:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:900|Work+Sans:wght@300;500&display=swap"
+        rel="stylesheet">
     <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+        integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+        crossorigin="anonymous"></script> -->
 </head>
+
 <body>
     <header>
+        <nav class="navigation">
+            <!-- <a href="index.html" class="hide">
+                <img src="./assets/g1136.png" alt="img" class="logo">
+            </a> -->
+            <div class="menu">
+                <div class="menu-content">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+                <ul class="flex-container-header hide menulist">
+                <!-- <a href="index.html">
+                <img src="./assets/g1136.png" alt="img" class="logo">
+                </a> -->
+                <!-- <input type="checkbox" /> -->
+                    <li><a href="explore.html">Explore</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <!--<li><a href="#">About Us</a></li>-->
+                    <li><a href="contact.html">Contact</a></li>
+                    <!-- <li><button>SIGN UP</button></li> -->
+                </ul>
+                <!-- <li><button>SIGN UP</button></li> -->
+            </div>
+            <!-- <a href="index.html" class="hide">
+                <img src="./assets/g1136.png" alt="img" class="logo">
+            </a> -->
+            <li class="sign-up-list">
+                <button>SIGN UP</button>
+            </li>
+            <!-- <span class="material-icons">menu</span> -->
+        </nav>
+    </header>
+    <!-- <header>
         <nav>
             <ul class="flex-container-header">
                 <a href="index.html">
-                    <img src="./assets/g1136.png" alt="img" class="logo">
+                    <img src="D:\Inkscape\g1136.png" alt="img" class="logo">
                 </a>
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <!--<li><a href="#">About Us</a></li>-->
                 <li><a href="contact.html">Contact</a></li>
                 <li><button>SIGN UP</button></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
     <div class="searchbox-container">
         <input class="searchbox" type="search" placeholder="Search" name="search">
     </div>
@@ -35,31 +76,46 @@
             Most Popular
         </h1>
     </div>
-    <div class="explore-content">
-        <div class="content">
-            <iframe class="video-embed" src="https://www.youtube-nocookie.com/embed/YqQx75OPRa0" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="explore-content-slide">
+        <div class="content"> <!--class="content"-->
+            <iframe class="video-embed" src="https://www.youtube-nocookie.com/embed/YqQx75OPRa0" frameborder="0"
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <p class="content-para">Fundamentals Of Graphic Design</p>
-            <p class="content-description">You will learn the basics of Graphic Design and some useful techniques to implement them.</p>
+            <p class="content-description">You will learn the basics of Graphic Design and some useful techniques to
+                implement them.</p>
             <a href="pricing.html">Learn more</a>
         </div>
-        <div class="content">
-            <iframe class="video-embed" src="https://www.youtube-nocookie.com/embed/mqAUCGNK0Sw" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="content"> <!--class="content"-->
+            <iframe class="video-embed" src="https://www.youtube-nocookie.com/embed/mqAUCGNK0Sw" frameborder="0"
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <p class="content-para">Video Editing: Complete Basics</p>
-            <p class="content-description">This a complete beginner course on how to edit your videos efficiently yet attractive way.</p>
+            <p class="content-description">This a complete beginner course on how to edit your videos efficiently yet
+                attractive way.</p>
             <a href="pricing.html">Learn more</a>
         </div>
-        <div class="content">
-            <iframe class="video-embed" src="https://www.youtube-nocookie.com/embed/ujxvy5NjeRQ" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="content"> <!--class="content"-->
+            <iframe class="video-embed" src="https://www.youtube-nocookie.com/embed/ujxvy5NjeRQ" frameborder="0"
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <p class="content-para">How To Learn Anything?</p>
-            <p class="content-description">In this course you will get to know the concept of 'how to learn' by Emmy Award winning Chris Do.</p>
+            <p class="content-description">In this course you will get to know the concept of 'how to learn' by Emmy
+                Award winning Chris Do.</p>
             <a href="pricing.html">Learn more</a>
         </div>
-        <div class="content">
-            <iframe class="video-embed" src="https://www.youtube-nocookie.com/embed/xHvFHRPLvII" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="content"> <!--class="content"-->
+            <iframe class="video-embed" src="https://www.youtube-nocookie.com/embed/xHvFHRPLvII" frameborder="0"
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <p class="content-para">Shoot Like a Pro with a Phone</p>
-            <p class="content-description">You will discover some awesome mobile photography techniques and principles.</p>
+            <p class="content-description">You will discover some awesome mobile photography techniques and principles.
+            </p>
             <a href="pricing.html">Learn more</a>
         </div>
+        <!-- <div class="content">
+
+        </div> -->
     </div>
     <div class="explore-section-1">
         <h1 class="explore-text-1">
@@ -110,7 +166,7 @@
     </div>
     <div class="explore-content" id="more-content" style="display: none;">
         <div class="content">
-            
+
         </div>
         <div class="content">
 
@@ -125,23 +181,11 @@
     <div class="load-more-btn-container">
         <button class="btn-headline load-more-btn-center" id="load">Load more..</button>
     </div>
-    <!--<script src="./js/main.js"></script>-->
-    <!--<script src="./js/scroll.js"></script>-->
-    <script>
-        var loadbtn = document.getElementById("load");
-        loadbtn.addEventListener("click", function(){
-            var more = document.getElementById("more-content");
-            if(more.style.display === "none"){
-                more.style.display = "flex";
-                more.scrollIntoView({behavior:"smooth"});
-                loadbtn.innerText = "Load less..";
-            }
-            else{
-                more.style.display = "none";
-                loadbtn.innerText = "Load more..";
-            }
-            // document.getElementById("more-content").classList.add("show");
-        });
-    </script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous"></script> -->
+    <script src="./js/navigation.js"></script>
+    <script src="./js/explore.js"></script>
 </body>
+
 </html>
