--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,7 @@
                     <div class="line"></div>
                 </div>
                 <ul class="flex-container-header hide menulist">
-                <!-- <a href="index.html">
-                <img src="./assets/g1136.png" alt="img" class="logo">
-                </a> -->
-                <!-- <input type="checkbox" /> -->
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="explore.html">Explore</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <!--<li><a href="#">About Us</a></li>-->
@@ -60,10 +57,10 @@
         </nav>
     </header> -->
     <div class="explore-section-1">
-        <h1 class="pricing-headline">Contact Us</h1>
+        <h1 class="pricing-headline font">Contact Us</h1>
     </div>
     <div class="form-div">
-        <form action="pricing.html" method="POST" class="form-container">
+        <form action="" method="POST" class="form-container">
             <!-- <label for="name" id="name-label">*Full Name</label> -->
             <input type="text" name="name" class="top-margin" placeholder="*Your Full Name" id="name-input">
             <!-- <label for="email" id="email-label">*Email</label> -->
