--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <img src="./assets/g1136.png" alt="img" class="logo">
                 </a> -->
                 <!-- <input type="checkbox" /> -->
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="explore.html">Explore</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <!--<li><a href="#">About Us</a></li>-->
@@ -73,7 +74,7 @@
             </span>
         </div>
         <div class="skill1-img-container">
-            <img src="D:\Blender Render\donutfinal.png" alt="donut" data-scroll class="skill1-img"></img>
+            <!-- <img src="D:\Blender Render\donutfinal.png" alt="donut" data-scroll class="skill1-img"></img> -->
         </div>
     </div>
     <div class="skillcontainer2">
@@ -88,7 +89,7 @@
             </span>
         </div>
         <div class="skill1-img-container">
-            <img src="D:\Blender Render\donutfinal.png" alt="donut" data-scroll class="skill1-img"></img>
+            <!-- <img src="D:\Blender Render\donutfinal.png" alt="donut" data-scroll class="skill1-img"></img> -->
         </div>
     </div>
     <div class="skillcontainer3">
@@ -104,7 +105,7 @@
             </span>
         </div>
         <div class="skill1-img-container">
-            <img src="D:\Blender Render\donutfinal.png" alt="donut" data-scroll class="skill1-img"></img>
+            <!-- <img src="D:\Blender Render\donutfinal.png" alt="donut" data-scroll class="skill1-img"></img> -->
         </div>
     </div>
     <div class="get-started">
