--- a/pricing.html
+++ b/pricing.html
@@ -29,6 +29,7 @@
                 <img src="./assets/g1136.png" alt="img" class="logo">
                 </a> -->
                 <!-- <input type="checkbox" /> -->
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="explore.html">Explore</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <!--<li><a href="#">About Us</a></li>-->
