--- a/explore.html
+++ b/explore.html
@@ -11,6 +11,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;900&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/fontawesome.min.css" integrity="sha512-shT5e46zNSD6lt4dlJHb+7LoUko9QZXTGlmWWx0qjI9UhQrElRb+Q5DM7SVte9G9ZNmovz2qIaV7IWv0xQkBkw==" crossorigin="anonymous" /> -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:Regular|Work+Sans:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900|Work+Sans:wght@300;500&display=swap"
         rel="stylesheet">
@@ -34,10 +35,7 @@
                     <div class="line"></div>
                 </div>
                 <ul class="flex-container-header hide menulist">
-                <!-- <a href="index.html">
-                <img src="./assets/g1136.png" alt="img" class="logo">
-                </a> -->
-                <!-- <input type="checkbox" /> -->
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="explore.html">Explore</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <!--<li><a href="#">About Us</a></li>-->
