--- a/explore.html
+++ b/explore.html
@@ -82,7 +82,7 @@
             <p class="content-para">Fundamentals Of Graphic Design</p>
             <p class="content-description">You will learn the basics of Graphic Design and some useful techniques to
                 implement them.</p>
-            <a href="pricing.html">Learn more</a>
+            <a href="pricing.html" class="course-cta">Learn more</a>
         </div>
         <div class="content"> <!--class="content"-->
             <iframe class="video-embed" src="https://www.youtube-nocookie.com/embed/mqAUCGNK0Sw" frameborder="0"
@@ -91,7 +91,7 @@
             <p class="content-para">Video Editing: Complete Basics</p>
             <p class="content-description">This a complete beginner course on how to edit your videos efficiently yet
                 attractive way.</p>
-            <a href="pricing.html">Learn more</a>
+            <a href="pricing.html" class="course-cta">Learn more</a>
         </div>
         <div class="content"> <!--class="content"-->
             <iframe class="video-embed" src="https://www.youtube-nocookie.com/embed/ujxvy5NjeRQ" frameborder="0"
@@ -100,7 +100,7 @@
             <p class="content-para">How To Learn Anything?</p>
             <p class="content-description">In this course you will get to know the concept of 'how to learn' by Emmy
                 Award winning Chris Do.</p>
-            <a href="pricing.html">Learn more</a>
+            <a href="pricing.html" class="course-cta">Learn more</a>
         </div>
         <div class="content"> <!--class="content"-->
             <iframe class="video-embed" src="https://www.youtube-nocookie.com/embed/xHvFHRPLvII" frameborder="0"
@@ -109,7 +109,7 @@
             <p class="content-para">Shoot Like a Pro with a Phone</p>
             <p class="content-description">You will discover some awesome mobile photography techniques and principles.
             </p>
-            <a href="pricing.html">Learn more</a>
+            <a href="pricing.html" class="course-cta">Learn more</a>
         </div>
         <!-- <div class="content">
 
